kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio
  labels:
    app: portfolio
