kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
  namespace: portfolio
  labels:
    app: portfolio-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
        - name: frontend
          image: shubham74888/portfolio-frontend:v8
          imagePullPolicy: IfNotPresent                 # Use local image (no registry)
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend
  namespace: portfolio
  labels:
    app: portfolio-frontend
spec:
  selector:
    app: portfolio-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
